# querent

./: .gitignore  Cargo.toml  README.md  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml
.github/workflows/: demo.yml
benches/: parse.rs
catalogs/: Cargo.toml
catalogs/src/: lib.rs  postgres.rs  util.rs
core/: .gitignore  Cargo.toml  README.md  build.rs
core/benches/: parse.rs
core/src/: doc.rs  lib.rs  span.rs  test_util.rs
core/src/ast/: mod.rs  node.rs  visitor.rs  walk.rs
core/src/catalog/: memory.rs  mod.rs  schema.rs  traits.rs
core/src/complete/: completion.rs  engine.rs  mod.rs  types.rs
core/src/complete/candidate/: mod.rs
core/src/complete/completion/: builder.rs  candidate.rs  mod.rs  ranker.rs
core/src/complete/context/: clause.rs  cursor.rs  mod.rs
core/src/complete/context/resolved/: binding.rs  identifier.rs  mod.rs  resolver.rs
core/src/complete/context/scope/: binding.rs  builder.rs  graph.rs  identifier.rs  mod.rs  relations.rs  resolve.rs  resolved.rs  resolver.rs  scope.rs
core/src/complete/provider/: col.rs  column.rs  function.rs  helpers.rs  keyword.rs  mod.rs  operator.rs  table.rs
core/src/complete/provider/column/: helper.rs  mod.rs  select.rs  where_.rs
core/src/complete/providers/: any.rs  column.rs  mod.rs
core/src/complete/rank/: any.rs  basic.rs  column_qualifier.rs  column_source.rs  composite.rs  join_key.rs  keyword.rs  mod.rs  table_qualifier.rs
core/src/complete/test_util/: matcher.rs  mod.rs  scenario.rs  schemas.rs  util.rs  v2.rs
core/src/dialect/: follow.rs  mod.rs  rule.rs
core/src/dialect/ansi/: functions.rs  keyword.rs  mod.rs  operator.rs  rule.rs
core/src/dialect/postgres/: keyword.rs  mod.rs  operator.rs  queries.rs
core/src/dialect/sqlite/: keyword.rs  mod.rs  operator.rs  queries.rs
core/src/engine/: completion.rs  mod.rs  ranker.rs
core/src/engine/context/: cursor.rs  mod.rs
core/src/engine/context/scope/: mod.rs
core/src/engine/provider/: column.rs  keyword.rs  mod.rs  operator.rs  table.rs
core/src/lex/: lexer.rs  mod.rs  rule.rs  tape.rs  types.rs
core/src/parse/: expr.rs  mod.rs  parser.rs  v2.rs  v3.rs
core/src/schema/: builder.rs  cache.rs  column.rs  data_type.rs  function.rs  mod.rs  table.rs
core/src/token/: lexer.rs
core/tests/: complete.rs  parse.rs  tokenize.rs
core/tests/common/: ast.rs  mod.rs
demo/: .gitignore  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  vite.config.ts
demo/src/: App.tsx  index.css
demo/src/components/: editor.tsx  header.tsx  results.tsx  schema-sidebar.tsx  theme-provider.tsx  theme-toggle.tsx
demo/src/components/ui/: button.tsx
demo/src/lib/: app.ts  duckdb.ts  editor.ts  engine.ts  monaco.ts  pglite.ts  seed.ts  sqlite.ts  store.ts
demo/src/lib/lsp/: index.ts  worker.ts
demo/src/lsp/: completions.worker.ts
demo/wasm/: lib.rs
lsp/: Cargo.toml  README.md
lsp-catalog/: Cargo.toml
lsp-catalog/src/: catalog.rs  lib.rs  remote.rs
lsp-engine-tcp/: Cargo.toml
lsp-engine-tcp/src/: lib.rs  protocol.rs
lsp-engine-tcp/src/catalog/: cache.rs  mod.rs  postgres.rs
lsp-server/: Cargo.toml
lsp-server/src/: main.rs  ws.rs
lsp-wasm/: .gitignore  Cargo.toml  build.rs
lsp-wasm/.cargo/: config.toml
lsp-wasm/src/: catalog.rs  engine.rs  lib.rs  provider.rs  server.rs
lsp-wasm/src/types/: internal.rs  mod.rs
lsp/src/: codec.rs  lib.rs  lsp.rs  main.rs  proto.rs  request.rs  response.rs  server.rs  ws.rs
lsp/src/engines/: mod.rs  proto.rs
lsp/src/lsp_protocol/: request.rs  response.rs
lsp/src/rpc/: codec.rs  mod.rs  request.rs  response.rs
pat/: Cargo.toml
pat/src/: lib.rs
src/: doc.rs  lib.rs
src/catalog/: memory.rs  mod.rs  schema.rs  traits.rs
src/dialect/: ansi.rs  mod.rs  postgres.rs
src/engine/: mod.rs  ranker.rs
src/engine/context/: clause.rs  cursor.rs  mod.rs
src/engine/provider/: table.rs
src/parse/: ast.rs  expr.rs  mod.rs  parser.rs
src/token/: tape.rs
src/tokenize/: mod.rs  span.rs  tape.rs  token.rs
tests/: complete.rs  parse.rs  tokenize.rs
tests/common/: ast.rs
vscode/: .vscodeignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
vscode/src/: connections.ts  extension.ts
