[workspace]
members = [
    "core",
    "lsp",
    "lsp-wasm",
    # "lsp-catalog",
    # "lsp-engine-tcp",
    # "lsp-server",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.dev]
codegen-units = 256
codegen-backend = "cranelift"
incremental = true
