[workspace]
members = ["core", "lsp", "lsp-wasm", "pat"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
tracing = { version = "0.1.44" }
serde_json = "1.0.5"

# [profile.dev]
# codegen-units = 256
# codegen-backend = "cranelift"
# incremental = true
[profile.dev]
split-debuginfo = "unpacked"
