[workspace]
members = ["core", "lsp", "lsp-wasm", "pat", "demo"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
tracing = { version = "0.1.44" }
serde_json = "1.0.1"

[profile.dev]
split-debuginfo = "unpacked"
# codegen-units = 256
# codegen-backend = "cranelift"
# incremental = true
