[package]
name = "querent-catalogs"
version = "0.1.0"
edition = "2024"

[dependencies]
querent-core = { path = "../core" }
tokio-postgres = "0.7"
tokio-postgres-rustls = "0.13"
tokio = { version = "1", features = ["sync", "time"] }
bb8 = "0.9"
bb8-postgres = "0.9"
lru = "0.12"
rustls = "0.23"
rustls-native-certs = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "time"] }
