[package]
name = "querent-core"
version = "0.1.0"
edition = "2024"

[dependencies]
phf = { version = "0.13", features = ["macros"] }
ropey = "1.6.1"
strsim = "0.11.1"
pat = { path = "../pat" }

# Feature dependencies
ts-rs = { version = "11", optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
tracing = "0.1.41"
thiserror = "2.0.17"

[features]
serde = ["dep:serde"]
typescript = ["dep:ts-rs"]

[build-dependencies]
phf_codegen = "0.13"

[dev-dependencies]
proptest = "1.5"
criterion = "0.7"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
futures = { version = "0.3", features = ["executor"] }
assert2 = "0.3.16"

[[bench]]
name = "parse"
harness = false
