[package]
name = "querent-core"
version = "0.1.0"
edition = "2024"

[dependencies]
phf = { version = "0.13", features = ["macros"] }
ropey = "1.6.1"
strsim = "0.11.1"
pat = { path = "../pat" }

# Serialization
serde = { workspace = true, features = ["derive"], optional = true }
smol_str = { version = "0.3.4", features = ["serde"] }
ts-rs = { version = "11", optional = true }
docloom = { git = "https://github.com/pingid/docloom.git", rev = "bde8952", optional = true }

tracing = "0.1.41"

# Benchmark dependencies
reqwest = { version = "0.12", features = [
    "blocking",
    "rustls-tls",
], optional = true }
criterion = { version = "0.7", optional = true }

[features]
serde = ["dep:serde"]
typescript = ["dep:ts-rs"]
test-utils = ["dep:docloom"]
bench = ["dep:reqwest", "dep:criterion"]

[build-dependencies]
phf_codegen = "0.13"

[dev-dependencies]
proptest = "1.5"

[[bench]]
name = "parse"
harness = false
required-features = ["bench"]
