[package]
name = "querent-core"
version = "0.1.0"
edition = "2024"

[dependencies]
phf = { version = "0.14", features = ["macros"] }
ropey = "1.6.1"
strsim = "0.11.1"
pat = { path = "../pat" }
smol_str = { version = "0.3.4", features = ["serde"] }
winnow = "1.0.3"

# Features
serde = { workspace = true, features = ["derive"], optional = true }
ts-rs = { version = "12", optional = true }
tracing = { version = "0.1.41", optional = true }


# Benchmark
criterion = { version = "0.8", optional = true }

# Testing
docloom = { git = "https://github.com/pingid/docloom.git", rev = "e431ca", optional = true }
itemize = { git = "https://github.com/pingid/itemize.git", rev = "8638009", optional = true }

[features]
serde = ["dep:serde"]
typescript = ["dep:ts-rs"]
test-utils = ["dep:docloom", "dep:itemize", "dep:tracing"]
tracing = ["dep:tracing"]
bench = ["dep:criterion"]

[build-dependencies]
phf_codegen = "0.14"

[dev-dependencies]
proptest = "1.5"

[[bench]]
name = "parse"
harness = false
required-features = ["bench"]
