[package]
name = "querent-lsp-engine-tcp"
version = "0.1.0"
edition = "2024"

[dependencies]
querent-lsp = { path = "../lsp" }
querent-core = { path = "../core" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }


# Postgres
tokio-postgres = "0.7"
tokio-postgres-rustls = "0.13"
tokio = { version = "1", features = ["sync", "time", "macros"] }
bb8 = "0.9"
bb8-postgres = "0.9"
rustls = "0.23"
rustls-native-certs = "0.8"

# Util
lru = "0.16"
futures = { version = "0.3", features = ["executor"] }
