[package]
name = "querent-lsp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Querent
querent-lsp = { path = "../lsp" }
querent-lsp-engine-tcp = { path = "../lsp-engine-tcp" }

# Runtime
tungstenite = "0.28"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"

# Logging
tracing-subscriber = "0.3.20"
tracing = "0.1.41"

# Util
serde = "1.0.228"
