[package]
name = "querent-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
querent-core = { path = "../core" }
tungstenite = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", features = ["executor"] }
ropey = "1.6.1"
lsp-types = "0.97.0"
